# sw2cadir

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: conversion_hints.example.json  run_all.py  verification_manifest.example.json
examples/shft40b/: feature_tree.json  model.py  shft40b_featured.build_report.json  shft40b_featured.operation_trace.json  shft40b_featured.step
examples/upper_bracket_1/: feature_tree.json  model.py  upper_bracket_1_featured.build_report.json  upper_bracket_1_featured.operation_trace.json  upper_bracket_1_featured.step
sw2cadir/: __init__.py  audit_feature_coverage.py  extract_sw_features.py  generate_simplecadapi.py  runtime.py  verify_outputs.py
